Fix left alignment of col

--- a/static/styles.css
+++ b/static/styles.css
@@ -30,3 +30,8 @@
 .music_info {
     padding: 0;
 }
+.main_container {
+    margin: 0;
+}
+
+
